--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,13 @@
       var socket = io();
       $('form').submit(function(){
       socket.emit('chat message', {"message" : $('#m').val(), "nickname" : $('#l').val() } );
-      $('#m').val('');
-      return false;
+        $('#m').val('');
+        return false;
       });
       socket.on('chat message', function(msg){
-      $('#messages').append($('<li>').text(msg.nickname + ' : '+ msg.message));
-      });
+        $('#messages').append($('<li>').text(msg.nickname + ' : '+ msg.message));
+        $("html, body").animate({ scrollTop: $(document).height() }, 100);
+        });
       });
     </script>
     <div id="chatBody">
