--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Socket.IO ooploop chat</title>
     <link rel="stylesheet" type="text/css" href="/index.css" media="screen" />
   </head>
   <body>
