preparation for authentication

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 		<script src="/script.js"></script>
 		<div id="loginBody">
-			<form action="">
+			<form action="" id="loginInput">
 				<input id="loginLogin" autocomplete="off" placeholder="Login" />
 				<input id="loginPass" autocomplete="off" placeholder="Password" />
 				<button>Auth</button>
