--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 				<input id="loginPass" autocomplete="off" placeholder="Password" />
 				<button>Auth</button>
 			</form>
+			<button id='regbutton'>Register</button>
 		</div>
 		<div id="chatBody">
 			<ul id="messages"></ul>
